[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = ""
authors = ["MadsLang <madslangs@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
pandas = "^1.4.3"
streamlit = "^1.12.2"
watchdog = "^2.1.9"
bs4 = "^0.0.1"
lxml = "^4.9.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
