[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = ""
authors = ["MadsLang <madslangs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7"
pandas = "^1.4.3"
numpy = "1.23.3"
streamlit = "^1.12.2"
watchdog = "^2.1.9"
bs4 = "^0.0.1"
lxml = "^4.9.1"
matplotlib = "^3.5.3"
borneo = "^5.3.5"
oci = "^2.82.0"
sklearn = "^0.0"
gensim = "3.8.3"
pyemd = "^0.5.1"
danlp = "^0.1.2"
torch = "^1.12.1"
spacy = "^3.4.1"
thefuzz = "^0.19.0"
python-Levenshtein = "^0.12.2"
transformers = "^4.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
